# city_car_management

./: LICENSE  docker-compose.yml  dockerfile  pyproject.toml  readme.md
app/: __init__.py  auth.py  init.py  models.py  routes.py
migrations/versions/: bcd2c3adaea5_criação_das_tabelas_iniciais.py
test/: test_app.py
