[tool.poetry]
name = "city-car-management"
version = "0.1.0"
description = ""
authors = ["Henrique Martinelli <henrique.martinelli@Outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^2.1.0"
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.9.1"
flask-jwt-extended = "^4.3.0"
flask-bcrypt = "^0.7.1"
marshmallow = "^3.14.0"
alembic = "^1.13.3"
flask-migrate = "^4.0.7"
pytest = "^8.3.3"
pytest-flask = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ['.']

